# TLPI

./: CMakeLists.txt  README.md
FileIO/: CMakeLists.txt  atomic_append.c  copy.c  large_file.c  multi_descriptors.c  seek_io.c  t_readv.c
Memalloc/: CMakeLists.txt  free_and_sbrk.c
Proc/: CMakeLists.txt  bad_longjmp.c  longjmp.c  modify_env.c  setjmp_vars.c  t_getenv.c
ProcCred/: CMakeLists.txt  idshow.c
SysInfo/: CMakeLists.txt  procfs_user_exe.c  procs_pidmax.c  t_uname.c
Time/: CMakeLists.txt  calendar_time.c  curr_time.c  curr_time.h  process_time.c  show_time.c  strtime.c
Timers/: CMakeLists.txt  real_timer.c
UsersGroups/: CMakeLists.txt  check_password.c  ugid_functions.c  ugid_functions.h
include/: error_functions.h  get_num.h  tlpi_hdr.h
lib/: CMakeLists.txt  error_functions.c  get_num.c
